<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tool_change_interfaces</name>
  <version>0.0.0</version>
  <description>ROS Interfaces for changing tools</description>

  <maintainer email="wilbrandt@fzi.de">Robert Wilbrandt</maintainer>

  <license>BSD-3-Clause</license>

  <author>Robert Wilbrandt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>manipulation_pipeline_interfaces</depend>

  <exec_depend>rosidl_default_generators</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
